[project]
name = "ai_agentss"
version = "0.1.0"
description = "ai-agentss using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
ai_agentss = "ai_agentss.main:run"
run_crew = "ai_agentss.main:run"
train = "ai_agentss.main:train"
replay = "ai_agentss.main:replay"
test = "ai_agentss.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
